[metadata]
name = pymedsec
version = 0.1.0
description = HIPAA/GDPR-ready medical image sanitization and encryption library with blockchain audit anchoring
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
author = Healthcare Security Team
author_email = security@example.com
url = https://github.com/example/pymedsec
project_urls =
    Documentation = https://pymedsec.readthedocs.io/
    Repository = https://github.com/example/pymedsec.git
    Issues = https://github.com/example/pymedsec/issues
    Changelog = https://github.com/example/pymedsec/blob/main/CHANGELOG.md
keywords = medical, imaging, security, hipaa, gdpr, encryption, dicom, blockchain
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    cryptography>=41.0.0
    pydicom>=2.3.0
    Pillow>=9.0.0
    python-dateutil>=2.8.0
    pyyaml>=6.0
    click>=8.0.0
    boto3>=1.26.0
    hvac>=1.0.0
    web3>=6.0.0

[options.packages.find]
include = healthcare_imgsec*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    build>=0.10.0
    twine>=4.0.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
ocr =
    pytesseract>=0.3.0

[options.entry_points]
console_scripts =
    pymedsec = healthcare_imgsec.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[coverage:run]
source = healthcare_imgsec
omit = */tests/*, */test_*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 88
ignore = E203, W503
per-file-ignores = __init__.py:F401
